# tofbot

./: .gitignore  .profile  .travis.yml  Procfile  README.md  bot.py  httpserver.py  irc.py  openshiftworkarounds.py  pyproject.toml  requirements.txt  t.py  testbot.py  toflib.py
.openshift/action_hooks/: pre_build
plugins/: amour.py  bar.py  classifier.py  context.py  dassin.py  donnezmoi.py  eightball.py  elle.py  euler.py  expand.py  getset.py  help.py  jokes.py  lag.py  like.py  lis.py  lisp.py  lolrate.py  ping.py  ponce.py  rick.py  risoli.py  sed.py  teachme.py  twitter.py
plugins/dassin_data/: bora.txt  colline.txt  ete.txt  hell.txt  oizo.txt
src/tofbot/: __init__.py  irc.py  toflib.py
src/tofbot/plugins/: __init__.py  amour.py  bar.py  context.py  dassin.py  donnezmoi.py  eightball.py  elle.py  expand.py  getset.py  help.py  jokes.py  lag.py  like.py  lis.py  lisp.py  lolrate.py  ping.py  rick.py  risoli.py  sed.py
src/tofbot/plugins/dassin_data/: chuck.txt  hibernatus.txt  lundi.txt  oizo.txt  sapes_comme_jamais.txt
src/tofbot/tofdata/: chucknorris.py  contrepeteries.py  fortunes.py  riddles.py
tests/: common.py  test_euler.py  test_expand.py  test_jokes.py  test_lag.py  test_lol.py  test_rick.py  test_risoli.py  test_twitter.py  testbot.py
tofdata/: chucknorris.py  contrepeteries.py  fortunes.py  riddles.py  tofades.py
