[project]
name = "tofbot"
version = "0.1.0"
description = "We needed a friend on IRC"
requires-python = ">=3.11"

dependencies = [
    "beautifulsoup4",
    "httpx",
    "unidecode",
]

[project.optional-dependencies]
test = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mock",
    "coverage",
    "pycodestyle",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/tofbot"]

[project.scripts]
tofbot = "tofbot:main"

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
